# scholarfetch

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCP_SERVER.md  README.md  SECURITY.md  SKILL.md  SKILLS.md  pyproject.toml  scholarfetch.py  scholarfetch_cli.py  scholarfetch_fastmcp.py  scholarfetch_mcp.py  server.json  setup.py
